--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ theme: jekyll-theme-slate
 title: Welcome to my GitHub Page!
 description: some testing here...
 text: some text here...
+
+# Heading1
+# Heading 2
