--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Welcome to my GitHub Page!
+title: Welcome to my GitHub Page! sveiki!
 description: some testing here...
 text: some text here...
 
