--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-slate
 title: Welcome to my GitHub Page! sveiki!
 description: some testing here...
 text: some text here...
-
+files:  click HERE
 # Heading1
 ### Heading 2
 
